Code Cleanup Sprint 1
Now that sprint 1 has been completed, I went ahead and cleaned up my code significantly. I went ahead and deleted the "Trials & Tests" folder as by now, I no longer have any use for the files within the folder. I also moved a chunk of repeating CSS code into main.css for extra efficiency. Another thing I did was I updated the head so that it displayed all the correct stuff (such as the charset, viewport, correct title, favicon etc). I also went ahead and did some general cleaning to my code, where I deleted useless classes, useless attributes that did nothing, and I added more comments. Overall, I believe it is safe to say that sprint 1 is now officially done!

--- a/committee.html
+++ b/committee.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>example header</title>
+        <title>Committee Members - East Coast Bays Toastmasters</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="./Resources/main.css">
-        <link rel="stylesheet" href="./Resources/members.css">
+        <link rel="stylesheet" href="./Resources/committee.css">
+        <link rel="icon" href="./Resources/Images/favicon.png">
     </head>
     <body>
         <div class="grid-container">
             <!--navigation bar-->
-            <div class="navbar">
-                <div class="loginbutton">
+            <div class="nav-bar">
+                <div class="login-button">
                     <input type="submit" value="Log In">
                 </div>
                 <div style="width: 100%">
-                    <a href="./index.html"><img src="./Resources/Images/toastmasters_logo.png" alt="Toastmasters Logo" class="logobutton"></a>
-                    <div class="navbutton"><a href="./index.html">Home</a></div>
-                    <div class="navbutton"><a href="./members.html">Members</a></div>
-                    <div class="navbutton"><a href="./calendar.html">Calendar</a></div>
-                    <div class="navbutton"><a href="./contact.html">Contact Us</a></div>
+                    <a href="./index.html"><img src="./Resources/Images/toastmasters_logo.png" alt="Toastmasters Logo" class="logo-button"></a>
+                    <div class="nav-button"><a href="./index.html">Home</a></div>
+                    <div class="nav-button"><a href="./committee.html">Committee</a></div>
+                    <div class="nav-button"><a href="./calendar.html">Calendar</a></div>
+                    <div class="nav-button"><a href="./contact.html">Contact Us</a></div>
                 </div>
             </div>
 
@@ -29,13 +32,14 @@
                     <p>In most Toastmaster Clubs the Executive Committee, made up of the 7 elected Officers and the Immediate Past President, handles business on behalf of the club. All Officers have an important role to attend and participate in Executive Committee meetings. The club needs a wide cross section of leadership planning to function well.</p>
                     <p>These club members are the elected Officers for East Coast Bays Toastmasters.</p>
                 </div>
+
                 <div class="member">
                     <div class="tag">
                         <h2>Helen Madden</h2>
                         <h3>President</h3>
                     </div>
-                    <img class="memberimage" src="./Resources/Images/Member Photos/hmadden.jpg" alt="committee member">
-                    <p class="contents">
+                    <img src="./Resources/Images/Member Photos/hmadden.jpg" alt="committee member">
+                    <p>
                         I've been a member of the East Coast Bays club for nearly eight years now.  Toastmasters has helped me in all strands of life, in both public speaking and leadership. It's also been a fantastic way to integrate with others from the local community. If you're looking to become a more confident speaker or gain some leadership skills in a supportive environment then please come along and visit us!
                     </p>
                 </div>
@@ -45,8 +49,8 @@
                         <h2>Marcus Bristol</h2>
                         <h3>Treasurer</h3>
                     </div>
-                    <img class="memberimage" src="./Resources/Images/Member Photos/mbristol.jpg" alt="committee member">
-                    <p class="contents">
+                    <img src="./Resources/Images/Member Photos/mbristol.jpg" alt="committee member">
+                    <p>
                         I'm a software developer who works in the city for a startup called Pushpay. After reviewing the feedback from one of my recent public talks, I realised that I needed to significantly improve my public speaking skills, so decided to come and learn from the best!
                     </p>
                 </div>
@@ -56,8 +60,8 @@
                         <h2>Glenda George</h2>
                         <h3>Member</h3>
                     </div>
-                    <img class="memberimage" src="./Resources/Images/Member Photos/ggeorge.jpg" alt="committee member">
-                    <p class="contents">
+                    <img src="./Resources/Images/Member Photos/ggeorge.jpg" alt="committee member">
+                    <p>
                         I joined East Coast Bays Toastmasters early 2008 and have filled the positions of VP Membership, VP Education and President and later served as an AD. An unexpectedly satisfying and rewarding journey with the opportunity to encourage and mentor others as well as developing myself. Every meeting is filled with entertainment as you hear everyone's stories real or fabricated. A pleasure to attend. The skills I have learned both in Public Speaking and Leadership have  been transferable to my working environment. A program designed for those who want to make the most of the moment and lead fulfilling lives that have an impact on the community. 
                     </p>
                 </div>
