--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>example header</title>
+        <title>Home - East Coast Bays Toastmasters</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="./Resources/main.css">
         <link rel="stylesheet" href="./Resources/homepage.css">
+        <link rel="icon" href="./Resources/Images/favicon.png">
     </head>
     <body>
         <div class="grid-container">
             <!--navigation bar-->
-            <div class="navbar">
-                <div class="loginbutton">
+            <div class="nav-bar">
+                <div class="login-button">
                     <input type="submit" value="Log In">
                 </div>
                 <div style="width: 100%">
-                    <a href="./index.html"><img src="./Resources/Images/toastmasters_logo.png" alt="Toastmasters Logo" class="logobutton"></a>
-                    <div class="navbutton"><a href="./index.html">Home</a></div>
-                    <div class="navbutton"><a href="./members.html">Members</a></div>
-                    <div class="navbutton"><a href="./calendar.html">Calendar</a></div>
-                    <div class="navbutton"><a href="./contact.html">Contact Us</a></div>
+                    <a href="./index.html"><img src="./Resources/Images/toastmasters_logo.png" alt="Toastmasters Logo" class="logo-button"></a>
+                    <div class="nav-button"><a href="./index.html">Home</a></div>
+                    <div class="nav-button"><a href="./committee.html">Committee</a></div>
+                    <div class="nav-button"><a href="./calendar.html">Calendar</a></div>
+                    <div class="nav-button"><a href="./contact.html">Contact Us</a></div>
                 </div>
             </div>
 
+            <!--hero banner-->
             <div class="header">
                 <h1>East Coast Bays Toastmasters</h1>
             </div>
 
             <!--main contents of the website-->
             <div class="main">
-                <div class="stockimage">
-                    <img src="./Resources/Images/generic_photo.jpg" style="width: 100%;">
+                <div class="stock-image">
+                    <img src="./Resources/Images/stock_image.jpg" style="width: 100%;">
                 </div>
 
                 <div class="info">
@@ -48,7 +52,7 @@
                     <img src="./Resources/Images/placeholder_maps.jpg" style="width: 100%;">
                 </div>
                     
-                <div class="locationimage">
+                <div class="location-image">
                     <img src="./Resources/Images/location_image.jpg" style="width: 100%; padding-left: 32px;">
                 </div>
             </div>
