Google Maps Embed
I've embedded a location of where ECB Toastmasters is located. I originally thought that this step was going to be very difficult to do, but it turned out to be surprisingly easy! The next task, I don't think will be quite so easy in comparison though...

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         10-12 Beachfront Lane<br>
                         Browns Bay, North Shore City
                     </b>
-                    <img src="./Resources/Images/placeholder_maps.jpg" style="width: 100%;">
+                    <iframe class="location-map" src="https://maps.google.com/maps?q=east%20coast%20bays%20toastmasters&amp;t=m&amp;z=16&amp;output=embed" frameborder="0"></iframe>
                 </div>
                     
                 <div class="location-image">
