--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="./Resources/main.css">
         <link rel="stylesheet" href="./Resources/homepage.css">
         <link rel="icon" href="./Resources/Images/favicon.png">
-        <script src="./Resources/homepage.js"></script> 
+        <script type="text/javascript" src="./Resources/homepage.js"></script> 
     </head>
     <body>
         <div class="grid-container">
@@ -53,41 +53,41 @@
                     <iframe class="location-map" src="https://maps.google.com/maps?q=east%20coast%20bays%20toastmasters&amp;t=m&amp;z=16&amp;output=embed" frameborder="0"></iframe>
                 </div>
                     
-                <div class="location-image">
+                <div class="location-image" style="background-color: orange;">
                      <!-- Slideshow container -->
-<div class="slideshow-container">
+                    <div class="slideshow-container">
 
-    <!-- Full-width images with number and caption text -->
-    <div class="mySlides fade">
-      <div class="numbertext">1 / 3</div>
-      <img src="./Resources/Images/img1.jpg" style="width:100%">
-      <div class="text">Caption Text</div>
-    </div>
+                    <!-- Full-width images with number and caption text -->
+                        <div class="mySlides fade">
+                            <div class="numbertext">1 / 3</div>
+                            <img src="./Resources/Images/img1.jpg" style="width:100%">
+                            <div class="text">Caption Text</div>
+                        </div>
+                    
+                        <div class="mySlides fade">
+                            <div class="numbertext">2 / 3</div>
+                            <img src="./Resources/Images/img2.jpg" style="width:100%">
+                            <div class="text">Caption Two</div>
+                        </div>
   
-    <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
-      <img src="./Resources/Images/img2.jpg" style="width:100%">
-      <div class="text">Caption Two</div>
-    </div>
+                        <div class="mySlides fade">
+                            <div class="numbertext">3 / 3</div>
+                            <img src="./Resources/Images/img3.jpg" style="width:100%">
+                            <div class="text">Caption Three</div>
+                        </div>
   
-    <div class="mySlides fade">
-      <div class="numbertext">3 / 3</div>
-      <img src="./Resources/Images/img3.jpg" style="width:100%">
-      <div class="text">Caption Three</div>
-    </div>
+                        <!-- Next and previous buttons -->
+                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    </div>
+                    <br>
   
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
-  
-  <!-- The dots/circles -->
-  <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-  </div> 
+                    <!-- The dots/circles -->
+                    <div style="text-align:center">
+                        <span class="dot" onclick="currentSlide(1)"></span>
+                        <span class="dot" onclick="currentSlide(2)"></span>
+                        <span class="dot" onclick="currentSlide(3)"></span>
+                    </div> 
                     <!--img src="./Resources/Images/location_image.jpg" style="width: 100%; padding-left: 32px;"-->
                 </div>
             </div>
