--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
                         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                         <a class="next" onclick="plusSlides(1)">&#10095;</a>
                     </div>
-                    <br>
-  
+                    
+                    
                     <!-- The dots/circles -->
-                    <div style="text-align:center">
+                    <div style="text-align: center; background-color: green;">
                         <span class="dot" onclick="currentSlide(1)"></span>
                         <span class="dot" onclick="currentSlide(2)"></span>
                         <span class="dot" onclick="currentSlide(3)"></span>
