--- a/committee.html
+++ b/committee.html
@@ -11,7 +11,7 @@
     <body>
         <div class="grid-container">
             <!--navigation bar-->
-            <div class="nav-bar">
+            <nav>
                 <div class="login-button">
                     <input type="submit" value="Log In">
                 </div>
@@ -22,53 +22,61 @@
                     <div class="nav-button"><a href="./calendar.html">Calendar</a></div>
                     <div class="nav-button"><a href="./contact.html">Contact Us</a></div>
                 </div>
-            </div>
+            </nav>
 
             <!--main contents of the website-->
-            <div class="main">
-                <div class="info">
-                    <h1>Committee Members</h1>
+            <main>
+                <section class="info">
+                    <header>
+                        <h1>Committee Members</h1>
+                    </header>
                     <p>Serving as an Officer in a Toastmasters Club is an opportunity and a responsibility. It is a great opportunity to get training and experience in a leadership role. It is part of our club membership to be responsible to promote the club's service to members.</p>
                     <p>In most Toastmaster Clubs the Executive Committee, made up of the 7 elected Officers and the Immediate Past President, handles business on behalf of the club. All Officers have an important role to attend and participate in Executive Committee meetings. The club needs a wide cross section of leadership planning to function well.</p>
                     <p>These club members are the elected Officers for East Coast Bays Toastmasters.</p>
-                </div>
+                </section>
 
-                <div class="member">
-                    <div class="tag">
+                <section class="member">
+                    <header class="tag">
                         <h2>Helen Madden</h2>
                         <h3>President</h3>
-                    </div>
-                    <img src="./Resources/Images/Member Photos/hmadden.jpg" alt="committee member">
+                    </header>
+                    <figure>
+                        <img src="./Resources/Images/Member Photos/hmadden.jpg" alt="committee member">
+                    </figure>
                     <p>
                         I've been a member of the East Coast Bays club for nearly eight years now.  Toastmasters has helped me in all strands of life, in both public speaking and leadership. It's also been a fantastic way to integrate with others from the local community. If you're looking to become a more confident speaker or gain some leadership skills in a supportive environment then please come along and visit us!
                     </p>
-                </div>
+                </section>
                     
-                <div class="member">
-                    <div class="tag">
+                <section class="member">
+                    <header class="tag">
                         <h2>Marcus Bristol</h2>
                         <h3>Treasurer</h3>
-                    </div>
-                    <img src="./Resources/Images/Member Photos/mbristol.jpg" alt="committee member">
+                    </header>
+                    <figure>
+                        <img src="./Resources/Images/Member Photos/mbristol.jpg" alt="committee member">
+                    </figure>
                     <p>
                         I'm a software developer who works in the city for a startup called Pushpay. After reviewing the feedback from one of my recent public talks, I realised that I needed to significantly improve my public speaking skills, so decided to come and learn from the best!
                     </p>
-                </div>
+                </section>
 
-                <div class="member">
-                    <div class="tag">
+                <section class="member">
+                    <header class="tag">
                         <h2>Glenda George</h2>
                         <h3>Member</h3>
-                    </div>
-                    <img src="./Resources/Images/Member Photos/ggeorge.jpg" alt="committee member">
+                    </header>
+                    <figure>
+                        <img src="./Resources/Images/Member Photos/ggeorge.jpg" alt="committee member">
+                    </figure>
                     <p>
                         I joined East Coast Bays Toastmasters early 2008 and have filled the positions of VP Membership, VP Education and President and later served as an AD. An unexpectedly satisfying and rewarding journey with the opportunity to encourage and mentor others as well as developing myself. Every meeting is filled with entertainment as you hear everyone's stories real or fabricated. A pleasure to attend. The skills I have learned both in Public Speaking and Leadership have  been transferable to my working environment. A program designed for those who want to make the most of the moment and lead fulfilling lives that have an impact on the community. 
                     </p>
-                </div>
-            </div>
+                </section>
+            </main>
 
             <!--footer-->
-            <div class="footer">
+            <footer>
                 <div class="socials">
                     <a href="http://www.facebook.com/ecbtoastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social Icons/facebook_logo.png" alt="Facebook Logo" style="height: 30px; padding-right: 8px;"></a>
                     <a href="http://www.meetup.com/East-Coast-Bays-Toastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social Icons/meetup_logo.png" alt="Meetup Logo" style="height: 38px;"></a>
@@ -76,7 +84,7 @@
                 <div><a href="https://d112tm.org.nz/" rel="external" target="_blank" style="color: black;">District Website</a></div>
                 <div><a href="https://www.toastmasters.org/" rel="external" target="_blank" style="color: black;">International Website</a></div>
                 <div><span>© 2023 East Coast Bays Toastmasters</span></div>
-            </div>
+            </footer>
         </div>
     </body>
 </html>
