--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <body>
         <div class="grid-container">
             <!--navigation bar-->
-            <div class="nav-bar">
+            <nav>
                 <div class="login-button">
                     <input type="submit" value="Log In">
                 </div>
@@ -22,17 +22,17 @@
                     <div class="nav-button"><a href="./calendar.html">Calendar</a></div>
                     <div class="nav-button"><a href="./contact.html">Contact Us</a></div>
                 </div>
-            </div>
+            </nav>
 
             <!--main contents of the website-->
-            <div class="main">
-                <div class="info">
+            <main>
+                <section class="info">
                     <h1>Contact Us</h1>
                     <p>You can find a lot of information about Toastmasters in New Zealand at the official <a href="https://d112tm.org.nz/" rel="external" target="_blank">District 112 website</a>.</p>
                     <p>If you can't find what you need there, please use the contact form below.</p>
                     <p>We will try our best to respond back to you within 24 hours.</p>
                     <br>
-                </div>
+                </section>
 
                 <form>
                     <label for="fullname">Full Name<span style="color: red;">*</span></label><br>
@@ -46,10 +46,10 @@
                     <span style="color: red; font-size: 12pt;">* means required </span>
                     <input type="submit" class="sendbutton" value="Send">
                 </form>
-            </div>
+            </main>
 
             <!--footer-->
-            <div class="footer">
+            <footer>
                 <div class="socials">
                     <a href="http://www.facebook.com/ecbtoastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social Icons/facebook_logo.png" alt="Facebook Logo" style="height: 30px; padding-right: 8px;"></a>
                     <a href="http://www.meetup.com/East-Coast-Bays-Toastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social Icons/meetup_logo.png" alt="Meetup Logo" style="height: 38px;"></a>
@@ -57,7 +57,7 @@
                 <div><a href="https://d112tm.org.nz/" rel="external" target="_blank" style="color: black;">District Website</a></div>
                 <div><a href="https://www.toastmasters.org/" rel="external" target="_blank" style="color: black;">International Website</a></div>
                 <div><span>© 2023 East Coast Bays Toastmasters</span></div>
-            </div>
+            </footer>
         </div>
     </body>
 </html>
