Code Cleanup Sprint 2
Most of my changes were more to do with just changing the file structure so that the CSS files and javascript files had their own folders. I primarily did this so I personally would have an easier time working on the project. I also deleted old testing files (slideshowtest) and I added alt text to my images. I believe now, that completes sprint 2!

--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
         <title>Contact Us - East Coast Bays Toastmasters</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="./Resources/main.css">
-        <link rel="stylesheet" href="./Resources/contact.css">
+		<link rel="stylesheet" href="./Resources/CSS/main.css">
+        <link rel="stylesheet" href="./Resources/CSS/contact.css">
         <link rel="icon" href="./Resources/Images/favicon.png">
     </head>
     <body>
@@ -51,8 +51,8 @@
             <!--footer-->
             <footer>
                 <div class="socials">
-                    <a href="http://www.facebook.com/ecbtoastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social Icons/facebook_logo.png" alt="Facebook Logo" style="height: 30px; padding-right: 8px;"></a>
-                    <a href="http://www.meetup.com/East-Coast-Bays-Toastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social Icons/meetup_logo.png" alt="Meetup Logo" style="height: 38px;"></a>
+                    <a href="http://www.facebook.com/ecbtoastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social_Icons/facebook_logo.png" alt="Facebook Logo" style="height: 30px; padding-right: 8px;"></a>
+                    <a href="http://www.meetup.com/East-Coast-Bays-Toastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social_Icons/meetup_logo.png" alt="Meetup Logo" style="height: 38px;"></a>
                 </div>
                 <div><a href="https://d112tm.org.nz/" rel="external" target="_blank" style="color: black;">District Website</a></div>
                 <div><a href="https://www.toastmasters.org/" rel="external" target="_blank" style="color: black;">International Website</a></div>
