--- a/calendar.html
+++ b/calendar.html
@@ -4,8 +4,8 @@
         <title>Calendar - East Coast Bays Toastmasters</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="./Resources/main.css">
-        <link rel="stylesheet" href="./Resources/calendar.css">
+		<link rel="stylesheet" href="./Resources/CSS/main.css">
+        <link rel="stylesheet" href="./Resources/CSS/calendar.css">
         <link rel="icon" href="./Resources/Images/favicon.png">
     </head>
     <body>
@@ -34,8 +34,8 @@
             <!--footer-->
             <footer>
                 <div class="socials">
-                    <a href="http://www.facebook.com/ecbtoastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social Icons/facebook_logo.png" alt="Facebook Logo" style="height: 30px; padding-right: 8px;"></a>
-                    <a href="http://www.meetup.com/East-Coast-Bays-Toastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social Icons/meetup_logo.png" alt="Meetup Logo" style="height: 38px;"></a>
+                    <a href="http://www.facebook.com/ecbtoastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social_Icons/facebook_logo.png" alt="Facebook Logo" style="height: 30px; padding-right: 8px;"></a>
+                    <a href="http://www.meetup.com/East-Coast-Bays-Toastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social_Icons/meetup_logo.png" alt="Meetup Logo" style="height: 38px;"></a>
                 </div>
                 <div><a href="https://d112tm.org.nz/" rel="external" target="_blank" style="color: black;">District Website</a></div>
                 <div><a href="https://www.toastmasters.org/" rel="external" target="_blank" style="color: black;">International Website</a></div>
