--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Home - East Coast Bays Toastmasters</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="./Resources/main.css">
-        <link rel="stylesheet" href="./Resources/homepage.css">
+		<link rel="stylesheet" href="./Resources/CSS/main.css">
+        <link rel="stylesheet" href="./Resources/CSS/homepage.css">
         <link rel="icon" href="./Resources/Images/favicon.png">
     </head>
     <body>
@@ -32,7 +32,7 @@
             <!--main contents of the website-->
             <main>
                 <figure class="stock-image">
-                    <img src="./Resources/Images/stock_image.jpg" style="width: 100%;">
+                    <img src="./Resources/Images/stock_image.jpg" style="width: 100%;" alt="Stock Image">
                 </figure>
 
                 <article class="info">
@@ -57,15 +57,15 @@
                     <div class="carousel-container">
                         <!--images shown in the carousel-->
                         <figure class="location-slides fade">
-                            <img src="./Resources/Images/Location Images/general_area.jpg" style="width:100%">
+                            <img src="./Resources/Images/Location_Images/general_area.jpg" style="width:100%" alt="General Area">
                         </figure>
                     
                         <figure class="location-slides fade">
-                            <img src="./Resources/Images/Location Images/entrance_1.jpg" style="width:100%">
+                            <img src="./Resources/Images/Location_Images/entrance_1.jpg" style="width:100%" alt="Entrance 1">
                         </figure>
   
                         <figure class="location-slides fade">
-                            <img src="./Resources/Images/Location Images/entrance_2.jpg" style="width:100%">
+                            <img src="./Resources/Images/Location_Images/entrance_2.jpg" style="width:100%" alt="Entrance 2">
                         </figure>
   
                         <!--next and previous buttons-->
@@ -85,14 +85,14 @@
             <!--footer-->
             <footer>
                 <div class="socials">
-                    <a href="http://www.facebook.com/ecbtoastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social Icons/facebook_logo.png" alt="Facebook Logo" style="height: 30px; padding-right: 8px;"></a>
-                    <a href="http://www.meetup.com/East-Coast-Bays-Toastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social Icons/meetup_logo.png" alt="Meetup Logo" style="height: 38px;"></a>
+                    <a href="http://www.facebook.com/ecbtoastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social_Icons/facebook_logo.png" alt="Facebook Logo" style="height: 30px; padding-right: 8px;"></a>
+                    <a href="http://www.meetup.com/East-Coast-Bays-Toastmasters" rel="external" target="_blank"><img src="./Resources/Images/Social_Icons/meetup_logo.png" alt="Meetup Logo" style="height: 38px;"></a>
                 </div>
                 <div><a href="https://d112tm.org.nz/" rel="external" target="_blank" style="color: black;">District Website</a></div>
                 <div><a href="https://www.toastmasters.org/" rel="external" target="_blank" style="color: black;">International Website</a></div>
                 <div><span>© 2023 East Coast Bays Toastmasters</span></div>
             </footer>
         </div>
-        <script type="text/javascript" src="./Resources/homepage.js"></script> 
+        <script type="text/javascript" src="./Resources/JavaScript/homepage.js"></script> 
     </body>
 </html>
